<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorFont"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text"
            android:padding="5dp"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/account" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="20dp"
                android:hint="@string/login_mane"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text"
            android:padding="5dp"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/pwd" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="20dp"
                android:hint="@string/login_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textSize="20dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <CheckBox
                android:id="@+id/cb_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:text="@string/login_save"
                android:textSize="15dp"
                android:textColor="@color/colorFont"
                android:buttonTint="@color/colorFont"/>

            <CheckBox
                android:id="@+id/cb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:text="@string/login_auto"
                android:textSize="15dp"
                android:textColor="@color/colorFont"
                android:buttonTint="@color/colorFont"/>
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/login_button"
            android:textSize="15dp"
            android:background="@drawable/bg_btn"/>


    </LinearLayout>


</LinearLayout>